--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,23 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Real-Estate Project",
-  "main": "server.js",
+  "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "nodemon -r dotenv/config src/server.js",
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3",
-    "multer": "^2.0.2",
+    "mongoose": "^8.20.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11",
-    "razorpay": "^2.9.6",
-    "validator": "^13.15.23"
+    "prettier": "^3.6.2"
   }
 }
